# book_library_server

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  pyproject.toml
.sqlx/: query-0485ba8682dc98b714d295e5780b5e36fb0fb6224b8628c181bb23bd0c953504.json  query-0644481879afc3abad9188fde0b00d19638ff16d6c8678d8d4e54a4b6bf5393d.json  query-078bb62c5139d159bc17d98480846591fe42a466b788e7c27e1a64a6549bfda3.json  query-0f3b01504179579a83609396a1db8423e01626183a48574a9f5a8645eabd88ec.json  query-14038503cd48456847a8ba692094691cb292a41b0456323b976e996536e20819.json  query-1875c11e55b61fd58e916f7663e2649e0c09ae604e620274718dd465e7958f64.json  query-191a5f0ddc1e4631b594f07710157cfdb3e002821f1ebb112fe772b274d08b1c.json  query-1f4b55a62fe01008a2a4a040450484785509312d213ea76a0efdd23d55e69a47.json  query-1f78b5cbdae5f9732e3637fcfd1605477bafc12a443900276c46df644a7f6d26.json  query-2d44679efadfba5a350a1612b9cf1ba241c4ddb38babf0cac5bdd8049e894ac8.json  query-34c2b0f605eddd776433543f2a553324ab61277083a0b6a41f1c43edc596ed60.json  query-3bf3d8ef40b6832eeeb1b5e01a3d7b5ce9586fad68f8f502adfb3cd2f372f0c8.json  query-4144af136af6f9a148a87030ce0f7c7625f4296bbee0ffdd24a81571e2afd54e.json  query-4fcb5676ff01cdeb824340375a2c96bd887d93d7cc6254ce5bead2ff3d7f3971.json  query-50379dd90ab755cdbeba57ea4ca62863aa087c35b4afa30c51224fe11cb0a823.json  query-51a16072eb796c133dc5e5986c163096084751678a86c60769849f96c79c398d.json  query-52cef4b1366f8071f42b772cfe32489050ce4d0b395cb0c93944389b1dfa8251.json  query-57f37e885a05ace86e5768a8ad7ac04f5d48784885db7d04d04e277d8c51970c.json  query-5d232f0a9a4cd5bb05d5d246af878bb43fb042f8643bb1a9b98dbafde4fbf50b.json  query-5ed13002eed0824bd874fc889b765e6e36bcfb7343a8c945bca0f3c46999ec2d.json  query-5f884948bcf39879c8d72d979e0638445a79707f55fd5eecb000a4166b3855b4.json  query-600cfd73a3a1c465c19d98dc4ba6381872d82f954b0733aa9518df2ee7701b6e.json  query-6e1d93e7773059ec3cb4fd29259f4f0250868c3f56e7b017ba8e5c20ccffb57d.json  query-6f91dfb52d18d080bcaf1dfbf7b7d4b6a6168cc33312d767798815d802962ff9.json  query-71a1b03481c1642c963b1641da8dbcc308fee8ca82b5800746f1568fb358bc37.json  query-71ddfa47ccbd71543a0ff402f9b077d7035ad35fb5e714f5d88357169b46b0fe.json  query-763625de44f46e1183a1ca2760120ce0303b571ffbc4e5f544340b5134229940.json  query-78e41ab1e7ca7b6acaf21aec5015a75c2962f6085a5774773fba8acb5e166e2e.json  query-8050a82de1de70e6ca60a02227795a263774da36fb00b97b00ed4ecd9a7ec778.json  query-868081a73c2ee8e44db3d19d82afed39949d5310dfccdea2bbda1086f8ff9120.json  query-91845687097ff0ce0f2f1dd51d2b61d2abf1cd2f04c2b3371f32720501c5f790.json  query-92f7e43d41bb56fe9ef3207ff4f870e12a02347d479dcda39c72f0ff2fe6a6fd.json  query-95c232a0c52d8111e763f02f17b4b2dbe2c96a79c9c99d2011f7f04a1dddf6b3.json  query-9740501d7b3d235efc914e185c9978d04e4d8ef89a2847f36e5f490183180fbb.json  query-981703669c9152946a541f70a84ec5dbf481e7a28f3d5949fbc34588561104e5.json  query-9bb82eaa3dcf8ead767d5f9ac9dbe8d70f8e68b12f6b004a9e495aa8ebc6d250.json  query-9be35f43d7faa0c65c88ced8ee10347ae67e6a906461fb4858fc003824f4b260.json  query-a22bfa2e92bf4a3b0710388c6c5bbfa50f24864b183bb304d35cea18babd8ce3.json  query-a76f04768121b35fdebdf19ea7959227068ccec4bfe2502d064a96ae5bcbc13e.json  query-b0ed6a54e198e8388620cc9cf12deed4ce2f7c539c912caa0c6f3b46c8f8835f.json  (+23 more)
docker/: build.dockerfile
fastapi_book_server/: main.py
migrations/: 20260116092202_create_extensions.sql  20260116092203_create_sources_table.sql  20260116092204_create_genres_table.sql  20260116092205_create_authors_table.sql  (+8 more)
prisma-cli/: Cargo.toml
(+83 files in other folders)
