[package]
name = "book_library_server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "prisma-cli"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.20.1"

prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["postgresql"] }

tokio = { version = "1.40.0", features = ["full"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
sentry-tracing = "0.34.0"
tower-http = { version = "0.6.1", features = ["trace"] }

axum = { version = "0.7.7", features = ["json"] }
axum-extra = { version ="0.9.4", features = ["query"] }
axum-prometheus = "0.7.0"
serde = { version = "1.0.210", features = ["derive"] }

sentry = { version = "0.34.0", features = ["debug-images"] }

meilisearch-sdk = "0.27.1"

rand = "0.8.5"

chrono = "0.4.38"
