[package]
name = "book_library_server"
version = "0.1.0"
edition = "2021"


[dependencies]
once_cell = "1.20.2"

tokio = { version = "1.42.0", features = ["full"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
sentry-tracing = "0.35.0"
tower-http = { version = "0.6.2", features = ["trace"] }

axum = { version = "0.7.9", features = ["json"] }
axum-extra = { version ="0.9.6", features = ["query"] }
axum-prometheus = "0.7.0"
serde = { version = "1.0.216", features = ["derive"] }

sentry = { version = "0.35.0", features = ["debug-images"] }

meilisearch-sdk = "0.27.1"

rand = "0.8.5"

chrono = { version = "0.4.39", features = ["serde"] }

sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
