[tool.poetry]
name = "fastapi_book_server"
version = "0.1.0"
description = ""
authors = ["Kurbanov Bulat <kurbanovbul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
uvicorn = {extras = ["standart"], version = "^0.15.0"}
ormar = "^0.10.22"
alembic = "^1.7.4"
asyncpg = "^0.24.0"
psycopg2 = "^2.9.1"
fastapi-pagination = {extras = ["ormar"], version = "^0.9.0"}
aiologger = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
